Fixed #215: Added download call results as csv button to the collapsed call flow box if it's mode is flow

--- a/app/assets/stylesheets/collapsible_crud_box.scss
+++ b/app/assets/stylesheets/collapsible_crud_box.scss
@@ -10,7 +10,7 @@
     color: black;
   }
   .bottom {
-    a.farrow, a.fsync {
+    a {
       margin-bottom: 0px !important;
       height: 20px;
     }
